tweaking css, trying to fix mobile alignment woes

--- a/app/assets/stylesheets/photobooth.css
+++ b/app/assets/stylesheets/photobooth.css
@@ -148,7 +148,7 @@ body.night h1 {
   font-size: 14px;
   font-family: georgia, serif;
   font-style: italic;
-  padding-top:25px;
+  padding-top:5px;
 }
 #linx a {
   color: #41d;
